--- a/_posts/2017-07-02-over-ons.md
+++ b/_posts/2017-07-02-over-ons.md
@@ -9,11 +9,11 @@ permalink: /overons.html
 
 ## 24:42 Project
   
-Het 24:42 Project, ook wel Project 24:42 genoemd, is een project bestaande uit vrijwillgers met als doel het helpen verbeteren van het gebruik van digitale veiligheids- en encryptiestandaarden bij voornamelijk Nederlandse (overheids)organisaties.
+Het 24:42 Project, ook wel Project 24:42 genoemd, is een project bestaande uit vrijwilligers met als doel het helpen verbeteren van het gebruik van digitale veiligheids- en encryptiestandaarden bij voornamelijk Nederlandse (overheids)organisaties.
 
 ### Visie
   
-De leden van het Project zijn van mening dat goede encryptie van internetverkeer essentieel is voor de digitale samenleving. Het (moedwillig) verzwakken van van deze encryptie maakt volgens de leden dit digitale verkeer onveilig voor burgers, bedrijven alswel de overheid.
+De leden van het Project zijn van mening dat goede encryptie van internetverkeer essentieel is voor de digitale samenleving. Het (moedwillig) verzwakken van deze encryptie maakt volgens de leden dit digitale verkeer onveilig voor burgers, bedrijven en de overheid.
 
 ### Onderzoek en Melding
   
@@ -21,4 +21,4 @@ Het Project gebruikt verschillende open-source technieken en eigen databases om 
 Het Project ziet het dan ook als haar taak om bij het ontdekken van het gebruik van verzwakte SSL/TLS-verbindingen of het ontbreken van de juiste veiligheidsupdates deze via een zo verantwoord mogelijke manier te melden bij de organisatie.
 Deze melding zal, indien aanwezig, gedaan worden volgens de norm die is opgesteld in het Responsible Disclosure-beleid van de betreffende organisatie.
   
-Indien er geen handelingen verricht worden door de betreffende organisatie zonder antwoord op de melding zal er indien nodig contact worden opgenomen met andere instanties zoals bijvoorbeeld het Nationaal Cyber Security Center Nederland.
+Indien er geen handelingen verricht worden door de betreffende organisatie zonder antwoord op de melding zal er indien nodig contact worden opgenomen met andere instanties, bijvoorbeeld het Nationaal Cyber Security Center Nederland.
