--- a/_posts/2017-07-02-over-ons.md
+++ b/_posts/2017-07-02-over-ons.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Over ons
-cover: cover.jpg
+cover: cover.webp
 date:   2017-07-01 00:00:00
 categories: posts
 permalink: /overons.html
